--- a/app/src/main/res/layout/activity_pilih_bangun_ruang.xml
+++ b/app/src/main/res/layout/activity_pilih_bangun_ruang.xml
@@ -92,6 +92,7 @@
             android:textColor="@android:color/white" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -108,6 +109,23 @@
             android:textColor="@android:color/white" />
 
         <Button
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:background="@drawable/bg_button2"
+            android:onClick="limasSegiEmpat"
+            android:text="@string/limas_segi_empat"
+            android:textColor="@android:color/white" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
             android:id="@+id/btn_hide"
             android:layout_width="0dp"
             android:layout_height="100dp"
@@ -118,4 +136,5 @@
             android:textColor="@android:color/white" />
 
     </LinearLayout>
+
 </LinearLayout>
